@@ -12,7 +12,7 @@ group = "no.vegvesen.nvdb.tnits"
 version = properties["version"]?.toString() ?: "1.0.0-SNAPSHOT"
 
 kotlin {
-    jvmToolchain(21)
+    jvmToolchain(25)
 }
 
 ktlint {
@@ -24,12 +24,12 @@ ktlint {
 
 dependencies {
     // Minio S3
-    implementation("io.minio:minio:8.5.17")
+    implementation("io.minio:minio:8.6.0")
 }
 
 tasks.withType<KotlinCompile> {
     compilerOptions {
-        jvmTarget.set(org.jetbrains.kotlin.gradle.dsl.JvmTarget.JVM_21)
+        jvmTarget.set(org.jetbrains.kotlin.gradle.dsl.JvmTarget.JVM_24)
         freeCompilerArgs.add("-opt-in=kotlin.RequiresOptIn")
         freeCompilerArgs.add("-Xcontext-parameters")
         freeCompilerArgs.add("-Xjsr305=strict")
@@ -39,6 +39,7 @@ tasks.withType<KotlinCompile> {
 
 tasks.withType<Test> {
     useJUnitPlatform()
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
 }
 
 publishing {
